--- a/mk1.css
+++ b/mk1.css
@@ -27,6 +27,13 @@ body {
 	background: cover;
 }
 
+.img_race {
+	height: 30px;
+}
+
+.img_final{
+	height: 30px;
+}
 
 #blank {
 	padding-bottom: 200px;
