--- a/mk1.css
+++ b/mk1.css
@@ -42,6 +42,11 @@ body {
 .table1 td {
 	text-align: center;
 }
+td label {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
 .table1 tr:nth-child(even) {
 	background: #eee;
 }
