--- a/mk1.css
+++ b/mk1.css
@@ -109,3 +109,116 @@ position: relative;
 bottom: 5px;
 }
 */
+
+@media onlu screen and (max-device-width: 480px) {
+	body {
+		margin: 0;
+		/* 画像ファイルの指定 */
+		/*background-image: url(./image/background1.jpg);*/
+		/* 画像を常に天地左右の中央に配置 */
+		background-position: center center;
+		/* 画像をタイル状に繰り返し表示しない */
+		background-repeat: no-repeat;
+		/* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
+		background-attachment: fixed;
+		/* 表示するコンテナの大きさに基づいて、背景画像を調整 */
+		background-size: cover;
+		/* 背景画像が読み込まれる前に表示される背景のカラー */
+		background-color: #f5f5f5;
+		}
+
+	#header {
+		font-size: 50px;
+		font-family: "Courier";
+		color: #fff;
+		/*border: 0px double #000;*/
+		/*width: 400px;*/
+		text-align: center;
+		background-color: #282E2E;
+		background: cover;
+	}
+
+
+	
+
+	.img_example {
+		height: 60px;
+		vertical-align:-100%;
+	}
+
+	.table1 th {
+		text-align: center;
+		background-color: #c0c0c0;
+	}
+	.table1 td {
+		text-align: center;
+	}
+	.label_radio {
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	.label_check {
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	.check_eng {
+		height: 3em;
+	}
+	.check_jpn {
+		height: 2em;
+	}
+	.table1 tr:nth-child(even) {
+		background: #eee;
+	}
+	.table1 tr:hover {
+		background: #a9a9a9;
+	}
+	
+	
+	#blank {
+		padding-bottom: 200px;
+		/*background-color: rgba(33, 39, 98, 0);*/
+	}
+	
+	#foot {
+		color: #fff;
+		/*margin-right: 100px;*/
+		text-align: right;
+		width: 100%;
+		height: 100px;
+		background-color: #282E2E;
+		background: cover;
+	}
+	
+	.linktext {
+		margin-right: 15px;
+		text-decoration: none; /*delete underline*/
+		color: #fff;
+		height: 10px;
+	}
+	
+	.img_flag {
+		height: 30px;
+		vertical-align: -40%;
+	}
+	
+	.img_Twitter {
+		height: 30px;
+		vertical-align: -40%;
+	}
+	
+	/*
+	.img_Instagram{
+		height: 30px;
+		filter:invert(100%);
+	}
+	.img_Youtube{
+		width: 30px;
+		position: relative;
+		bottom: 5px;
+	}
+	*/
+
+}
