--- a/mk1.css
+++ b/mk1.css
@@ -110,7 +110,7 @@ bottom: 5px;
 }
 */
 
-@media onlu screen and (max-device-width: 480px) {
+@media only screen and (max-device-width: 480px) {
 	body {
 		margin: 0;
 		/* 画像ファイルの指定 */
