--- a/test_mk1.css
+++ b/test_mk1.css
@@ -116,12 +116,12 @@ body {
 
 .img_flag {
 	height: 30px;
-	vertical-align: -40%;
+	/*vertical-align: -40%;*/
 }
 
 .img_Twitter {
 	height: 30px;
-	vertical-align: -40%;
+	/*vertical-align: -40%;*/
 }
 
 /*
@@ -150,32 +150,51 @@ bottom: 5px;
 		background-size: cover;
 		/* 背景画像が読み込まれる前に表示される背景のカラー */
 		background-color: #f5f5f5;
-		font-size: 25px;
+		font-size: 40px;
 	}
 	#header {
-		font-size: 4em;
+		font-size: 1em;
 		font-family: "Courier";
 		color: #fff;
 		/*border: 0px double #000;*/
 		/*width: 400px;*/
-		text-align: center;
+		text-align: left;
 		background-color: #282E2E;
 		background: cover;
+		height: 2.5em;
+		display: flex;
+  		align-items: center;
+  		padding-left: 1em;
 	}
 	.subject {
+		width: auto;
+		height: 1em;
 		/*font-size: 1em;*/
 	}
 	#select_language {
+		height: 1em;
 		text-align: right;
 		/* font-size: 20px; */
 	}
 	.table_example {
 	width: 100%;
-	/* font-size: 20px; */
+	font-size: 0.75em;
 	}
 
 	.table_example td {
 		text-align: center;
+	}
+
+	#label_file{
+		text-align: center;
+		border-radius: 10px;
+		background: #282E2E;
+		color: #fff;
+		padding: 0.5em 1em;
+	}
+
+	#label_file input {
+		display: none;
 	}
 
 	.canvas {
@@ -190,7 +209,7 @@ bottom: 5px;
 	}
 	.table1 {
 		width: 100%;
-		font-size: 20px;
+		font-size: 0.667em;
 	}
 	.table1 th {
 		text-align: center;
@@ -231,8 +250,24 @@ bottom: 5px;
 		background: #a9a9a9;
 	}
 
+	#label_button_canvas{
+		text-align: center;
+		border-radius: 10px;
+		background: #282E2E;
+		color: #fff;
+		padding: 0.5em 1em;
+	}
+
+	#label_button_canvas input {
+		display: none;
+	}
+
 	.text_total {
-		font-size:1.5em;
+		font-size:40px;
+		margin-top: 2em;
+	}
+	#total {
+		font-size:40px;
 	}
 
 	#blank {
@@ -249,18 +284,21 @@ bottom: 5px;
 		background: cover;
 	}
 	.linktext {
+		font-size: 0.667em;
+		margin: 15px;
 		margin-right: 15px;
 		text-decoration: none; /*delete underline*/
 		color: #fff;
-		height: 10px;
+		height: 1em;
 	}
 	.img_flag {
-		height: 30px;
-		vertical-align: -40%;
+		text-align: center;
+		height: 1em;
+		/*vertical-align: -40%;*/
 	}
 	.img_Twitter {
-		height: 30px;
-		vertical-align: -40%;
+		height: 1em;
+		/*vertical-align: -40%;*/
 	}
 
 	/*
