--- a/test_mk1.css
+++ b/test_mk1.css
@@ -191,7 +191,7 @@ bottom: 5px;
 		background: #282E2E;
 		color: #fff;
 		padding: 0.5em 1em;
-		width: 50em;
+		padding-right: 2em;
 	}
 
 	#label_file input {
