--- a/test_mk1.css
+++ b/test_mk1.css
@@ -188,11 +188,11 @@ bottom: 5px;
 	#label_file{
 		text-align: center;
 		border-radius: 10px;
-		/*background: #282E2E;*/
-		background: #ff0;
+		background: #282E2E;
+		/*background: #ff0;*/
 		color: #fff;
 		padding: 0.5em 1em;
-		padding-right: 2em;
+		display: inline-block;
 	}
 
 	#label_file input {
