--- a/mk1.css
+++ b/mk1.css
@@ -248,7 +248,20 @@ body {
 	height: 30px;
 	/*vertical-align: -40%;*/
 }
+/*for lounge.html*/
+#inputText {
+	height: 10em;
+	width: 80%;
+}
 
+#outputText {
+	height: 20em;
+	width: 80%;
+}
+
+#loadExample {
+	height: 2em;
+}
 /*
 .img_Instagram{
 height: 30px;
@@ -513,6 +526,19 @@ bottom: 5px;
 		/*vertical-align: -40%;*/
 	}
 
+	/*for lounge.html*/
+	#inputText {
+		font-size: 0.5em;
+		height: 10em;
+	}
+	#outputText {
+		font-size: 0.5em;
+		height: 20em;
+	}
+	#loadExample {
+		height: 3em;
+		font-size: 0.7em;
+	}
 	/*
 	.img_Instagram{
 		height: 30px;
